/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */


package com.dremio.service.orphanage.proto;

option java_package = "com.dremio.service.orphanage.proto";

option optimize_for = SPEED;

message OrphanIcebergMetadata {
  optional string iceberg_table_uuid = 1;
  optional string dataset_tag = 2;
  repeated string dataset_full_path = 3;
}

enum OrphanType {
  INVALID = 0;
  ICEBERG_METADATA = 1;
}

message OrphanId {
  optional string orphan_id = 1  ;
}

message Orphan {
    optional OrphanType orphan_type = 1;
    optional bytes orphan_details = 2;
    optional int64 retries_count = 3;
    optional int64 created_at = 4;
    optional int64 scheduled_at = 5;
}


